--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assignment2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "https://hyunsolchoi.github.io/Maerchen/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
