--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +54,11 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13"
+    "@eslint/js": "^9.15.0",
+    "@types/lodash": "^4.17.13",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
+    "typescript-eslint": "^8.15.0"
   }
 }
