--- a/.github/workflows/develop-deploy.yml
+++ b/.github/workflows/develop-deploy.yml
@@ -1,10 +1,16 @@
 name: Develop Branch CI
 
-# 실행 조건: develop 브랜치에 push 발생 시
+# 실행 조건: develop 브랜치에 push 발생 시, feature workflow 의 완수 이후
 on:
   push:
     branches:
       - develop
+  workflow_run:
+    workflows:
+      - Feature Branch CI
+    types:
+      - completed
+
 
 jobs:
   # 1. gh-pages로 배포
