--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -36,3 +36,11 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub 제공 토큰
           publish_dir: ./build # 빌드된 정적 파일 경로
           force_orphan: true # gh-pages 브랜치를 비어있는 상태로 시작
+
+      # 6. Develop 브랜치를 Main 브랜치에 강제 Push
+      - name: Force Push Develop to Main
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout develop
+          git push origin develop:main --force
