--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npx env-cmd -f .env-dev react-scripts start",
+    "start:prod": "npx env-cmd -f .env-prod react-scripts start",
+    "build": "npx env-cmd -f .env-prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13"
+    "@types/lodash": "^4.17.13",
+    "env-cmd": "^10.1.0"
   }
 }
