--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "npx env-cmd -f .env-dev react-scripts start",
     "start:prod": "npx env-cmd -f .env-prod react-scripts start",
-    "build": "npx env-cmd -f .env-prod react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
