--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -42,12 +42,8 @@ jobs:
           REACT_APP_KAKAO_JS_KEY: ${{ secrets.REACT_APP_KAKAO_JS_KEY }}
           REACT_APP_KAKAO_SDK_INTEGRITY: ${{ secrets.REACT_APP_KAKAO_SDK_INTEGRITY }}
           REACT_APP_REDIRECT_URI: ${{ secrets.REACT_APP_REDIRECT_URI }}
-        run: |
-          if [ -z "${REACT_APP_TMDB_API_KEY}" ] || [ -z "${REACT_APP_KAKAO_JS_KEY}" ] || [ -z "${REACT_APP_KAKAO_SDK_INTEGRITY}" ] || [ -z "${REACT_APP_REDIRECT_URI}" ]; then
-            echo "Error: One or more environment variables are missing."
-            exit 1
-          fi
-          npm run build
+        run: npm run build
+        continue-on-error: true
 
       # 5. gh-pages 브랜치로 배포
       - name: Deploy to GitHub Pages
@@ -56,7 +52,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub 제공 토큰
           publish_dir: ./build # 빌드된 정적 파일 경로
           force_orphan: true # gh-pages 브랜치를 비어있는 상태로 시작
-
 
       # 6. branch 정보 가져오기
       - name: Fetch all branches
