--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -15,54 +15,56 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 조건 확인
       - name: Run only if both conditions are met
         if: >
           github.event_name == 'workflow_run' &&
           github.event.workflow_run.head_branch == 'develop'
         run: echo "Both conditions met! Running workflow..."
-      # 0. env
+
+      # 0. env 초기화
       - name: Reset .env file
         run: echo "" > .env
-
-      - name: Create .env file
-        run: |
-            echo "REACT_APP_TMDB_API_KEY=${{ secrets.REACT_APP_TMDB_API_KEY }}" >> .env
-            echo "REACT_APP_KAKAO_JS_KEY=${{ secrets.REACT_APP_KAKAO_JS_KEY }}" >> .env
-            echo "REACT_APP_KAKAO_SDK_INTEGRITY=${{ secrets.REACT_APP_KAKAO_SDK_INTEGRITY }}" >> .env
-            echo "REACT_APP_REDIRECT_URI=${{ secrets.REACT_APP_REDIRECT_URI }}" >> .env
 
       # 1. 코드 체크아웃
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Node.js 환경 설정
+      # 2. .env 파일 생성
+      - name: Create .env file
+        run: |
+          echo REACT_APP_TMDB_API_KEY=${{ secrets.REACT_APP_TMDB_API_KEY }} >> .env
+          echo REACT_APP_KAKAO_JS_KEY=${{ secrets.REACT_APP_KAKAO_JS_KEY }} >> .env
+          echo REACT_APP_KAKAO_SDK_INTEGRITY=${{ secrets.REACT_APP_KAKAO_SDK_INTEGRITY }} >> .env
+          echo REACT_APP_REDIRECT_URI=${{ secrets.REACT_APP_REDIRECT_URI }} >> .env
+
+      # 3. Node.js 환경 설정
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16 # Node.js 버전
+          node-version: 16
 
-      # 3. 의존성 설치
+      # 4. 의존성 설치
       - name: Install dependencies
         run: npm install
 
-      # 4. 빌드 실행
+      # 5. 빌드 실행
       - name: Build project
         run: npm run build
 
-      # 5. gh-pages 브랜치로 배포
+      # 6. gh-pages 브랜치로 배포
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub 제공 토큰
-          publish_dir: ./build # 빌드된 정적 파일 경로
-          force_orphan: true # gh-pages 브랜치를 비어있는 상태로 시작
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          force_orphan: true
 
-
-      # 6. branch 정보 가져오기
+      # 7. branch 정보 가져오기
       - name: Fetch all branches
         run: git fetch --all
 
-      # 7. Develop 브랜치를 Main 브랜치에 강제 Push
+      # 8. Develop 브랜치를 Main 브랜치에 강제 Push
       - name: Force Push Develop to Main
         run: |
           git config user.name "github-actions[bot]"
